Fix invisible mailing list color on android

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -1,5 +1,6 @@
 .Home {
   align-items: center;
+  color: #fff;
   display: flex;
   flex-direction: column;
   max-width: 95vw;
