--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,6 @@ body {
 }
 
 body {
-  color: #fff;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
   font-weight: 900;
   -webkit-font-smoothing: antialiased;
