--- a/app/mailing-list/MailingList.module.css
+++ b/app/mailing-list/MailingList.module.css
@@ -1,5 +1,4 @@
 .MailingList {
-  color: initial;
   height: 100%;
   width: 100%;
 }
